testdata/baselines/reference/submodule/compiler/declarationEmitLateBoundJSAssignments.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
file.js(3,18): error TS2304: Cannot find name 'Symbol'.
file.js(4,1): error TS7053: Element implicitly has an 'any' type because expression of type 'error' can't be used to index type '{ (): void; bar: number; strMemName: string; foo[dashStrMem]: string; foo[numMem]: string; }'.
file.js(13,11): error TS7053: Element implicitly has an 'any' type because expression of type 'error' can't be used to index type '{ (): void; bar: number; strMemName: string; foo[dashStrMem]: string; foo[numMem]: string; }'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== file.js (3 errors) ====
    export function foo() {}
    foo.bar = 12;
    const _private = Symbol();
                     ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    foo[_private] = "ok";
    ~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'error' can't be used to index type '{ (): void; bar: number; strMemName: string; foo[dashStrMem]: string; foo[numMem]: string; }'.
    const strMem = "strMemName";
    foo[strMem] = "ok";
    const dashStrMem = "dashed-str-mem";
    foo[dashStrMem] = "ok";
    const numMem = 42;
    foo[numMem] = "ok";
    
    /** @type {string} */
    const x = foo[_private];
              ~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'error' can't be used to index type '{ (): void; bar: number; strMemName: string; foo[dashStrMem]: string; foo[numMem]: string; }'.
    /** @type {string} */
    const y = foo[strMem];
    /** @type {string} */
    const z = foo[numMem];
    /** @type {string} */
    const a = foo[dashStrMem];
    